force-app/main/default/objects/DM_Parcel1__c/fields/DM_Farm__c.field-meta.xml
<CustomField>
    <fullName>DM_Farm__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Farm</label>
    <referenceTo>DM_Farm__c</referenceTo>
    <relationshipLabel>Parcels</relationshipLabel>
    <relationshipName>Parcels</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>