force-app/main/default/objects/DM_Parcel1__c/fields/DM_GIS_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>DM_GIS_Coordinates__c</fullName>
    <label>GIS Coordinates</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>