force-app/main/default/objects/DM_Parcel1__c/fields/DM_Number_of_Organic_Fields__c.field-meta.xml
<CustomField>
    <fullName>DM_Number_of_Organic_Fields__c</fullName>
    <label>Number of Organic Fields</label>
    <summaryFilterItems>
        <field>DM_Field__c.DM_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>DM_Field__c.DM_Land_Use__c</field>
        <operation>equals</operation>
        <value>Certified Organic</value>
    </summaryFilterItems>
    <summaryForeignKey>DM_Field__c.DM_Parcel__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>