force-app/main/default/objects/DM_Parcel1__c/fields/DM_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>DM_Street_Address__c</fullName>
    <label>Street Address</label>
    <type>Address</type>
</CustomField>