force-app/main/default/objects/DM_Parcel1__c/fields/DM_Total_Organic_Area__c.field-meta.xml
<CustomField>
    <fullName>DM_Total_Organic_Area__c</fullName>
    <label>Total Organic Area (Acres)</label>
    <summarizedField>DM_Field__c.DM_Total_Area__c</summarizedField>
    <summaryFilterItems>
        <field>DM_Field__c.DM_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>DM_Field__c.DM_Land_Use__c</field>
        <operation>equals</operation>
        <value>Certified Organic</value>
    </summaryFilterItems>
    <summaryForeignKey>DM_Field__c.DM_Parcel__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>