force-app/main/default/objects/DM_Parcel1__c/recordTypes/DM_Parcel.recordType-meta.xml
<RecordType>
    <fullName>DM_Parcel</fullName>
    <active>true</active>
    <label>Parcel</label>
</RecordType>