force-app/main/default/objects/DM_Parcel1__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>digitalm__DM_Street_Address__Street__s</columns>
    <columns>DM_Farm__c</columns>
    <columns>DM_Total_Area__c</columns>
    <columns>DM_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>